@@ -16,6 +16,7 @@ git-annex (4.20130912) UNRELEASED; urgency=low
   * addurl: Fix quvi audodetection, broken in last release.
   * status: In local mode, displays information about variance from configured
     numcopies levels. (--fast avoids calculating these)
+  * gcrypt: Ensure that signing key is set to one of the participants keys.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 12 Sep 2013 12:14:46 -0400
 
